--- a/src/WorldTravel.Web/Pages/Country/Detail.cshtml
+++ b/src/WorldTravel.Web/Pages/Country/Detail.cshtml
@@ -310,6 +310,7 @@
         $(document).ready(function () {
             //$('body').removeClass();
             $('body').addClass('template-product template-product-right-thumb belle');
+            $('#Form_BirthDate').attr('type', 'date');
 
             $('body').addClass('home9-parallax');
             $('.header-wrap').removeClass('classicHeader');
