--- a/src/WorldTravel.Web/Pages/Shared/_Menu2.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Menu2.cshtml
@@ -27,8 +27,9 @@
                 </div>
                 <nav class="grid__item" id="AccessibleNav">
                     <ul id="siteNav" class="site-nav medium right hidearrow">
-                        <li class="lvl1"><a href="/Home"><i class="fa fa-home fa-fw"></i>@L["Home"]</a></li>
+                        <li class="lvl1"><a href="/VisaType">@L["VisaTypes"]</a></li>
                         <li class="lvl1"><a href="/Country">@L["Countries"]</a></li>
+                        <li class="lvl1"><a href="/Home"><i class="fa fa-home fa-fw"></i>@L["Home"]</a></li>
                     </ul>
                 </nav>
                 <!--End Web Menu-->
